--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url = jdbc:postgresql://localhost:5432/car_insurence
+spring.datasource.username = postgres
+spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
